src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}
@font-face {
  font-family: 'CreatoDisplay';
  src: url('/fonts/CreatoDisplay-Regular.woff2') format('woff2');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'CreatoDisplay';
  src: url('/fonts/CreatoDisplay-Medium.woff2') format('woff2');
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'CreatoDisplay';
  src: url('/fonts/CreatoDisplay-Bold.woff2') format('woff2');
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

@theme {
 
  --color-primary: #dc3d24;
  --color-secondary: #232b2b;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-green-primary: #29903b;
  --font-sans: var(--font-geist-sans);
  --font-creato: 'CreatoDisplay', sans-serif;
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}




.prose {
  --tw-prose-body: #111827;
  --tw-prose-headings: #030712;
  --tw-prose-links: #2563eb;
  --tw-prose-bold: #030712;
  --tw-prose-quotes: #374151;
}
/* Headings */
.prose h1 {
  font-size: 2.4rem;
  font-weight: 700;
  letter-spacing: -0.02em;
  margin-top: 2.5rem;
}

/* Table header */
.prose thead {
  border-bottom: 1px solid #e5e7eb;
}

.prose th {
  padding: 0.75rem 1rem;
  text-align: left;
  font-weight: 600;
  color: #030712;
  background-color: #f9fafb;
}

/* Table body */
.prose td {
  padding: 0.75rem 1rem;
  border-bottom: 1px solid #f1f5f9;
  vertical-align: top;
}
.prose hr{
  opacity: 20%;
}
.prose h2 {
  font-size: 1.85rem;
  font-weight: 600;
  margin-top: 2.25rem;
}

.prose h3 {
 
  font-weight: 600;
}

/* Paragraphs */
.prose p {
  line-height: 1.75;
}

/* Links */
.prose a {
  color: #2563eb;
  text-decoration: none;
  font-weight: 500;
}

.prose a:hover {
  text-decoration: underline;
}

/* Blockquotes */
.prose blockquote {
  border-left-color: #e5e7eb;
  font-style: normal;
  color: #374151;
}

/* Images */
.prose img {
  border-radius: 0.5rem;
}

/* Lists */
.prose ul {
  padding-left: 1.25rem;
}



body {
  color: var(--background);
  font-family: Helvetica, sans-serif;
}

.shimmer {
  background: linear-gradient(90deg, #e0e0e0 0%, #f5f5f5 50%, #e0e0e0 100%);
  background-size: 200% 100%;
  animation: shimmer 1.3s infinite;
}

@keyframes shimmer {
  0% {
    background-position: -200% 0;
  }
  100% {
    background-position: 200% 0;
  }
}

